<resources>
    <string name="app_name">EudekaProject</string>

    <string name="input_domain_label">Search Your Domain</string>
    <string name="cek_domain_label">Cek Domain</string>
    <string name="cari_domain_label">Cari</string>
    <string name="domain_name_label">Domain Name</string>
    <string name="domain_status_label">Domain Status</string>
    <string name="domain_desc_label">Domain Description</string>

    <string name="not_avail">Not Available</string>
    <string name="result">Result</string>
    <string name="empty_field">Please Fill Your Input !</string>
    <string name="domain">Domain :</string>
    <string name="expiry_date">Expiry Date :</string>
    <string name="active">Active :</string>
    <string name="a">A :</string>
    <string name="txt">TXT :</string>
    <string name="country">Country :</string>
    <string name="ns">NS :</string>
    <string name="resolvable">Resolvable :</string>
    <string name="mx">MX :</string>
    <string name="suffix">Suffix :</string>
    <string name="url">Url :</string>
    <string name="robotstxt">RobotsTxt :</string>
    <string name="apps">Apps :</string>
    <string name="parser">Parser :</string>
    <string name="parsererror">ParserError :</string>
    <string name="cname">CName :</string>
    <string name="request_time_out">Something Wrong :(</string>
    <string name="domain_detail">Domain Detail</string>
    <string name="fill_your_domain_here">Fill Your Domain Here !</string>
    <string name="exchange">Exchange :</string>
    <string name="priority">Priority :</string>
    <string name="domain_avail">Your Domain Available !</string>
    <string name="domain_unavai">Your Domain Unavailable !</string>
</resources>
