<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="30dp"
                    android:text="@string/input_domain_label"/>

            <View android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="@color/colorPrimary"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                <EditText
                        android:layout_width="match_parent"
                        android:hint=""
                        android:id="@+id/eTxt_input_domain"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                <Button
                        android:layout_width="wrap_content"
                        android:text="@string/cek_domain_label"
                        android:id="@+id/btn_cek_domain"
                        android:textSize="20dp"
                        android:layout_height="wrap_content"/>
                <Button
                        android:layout_width="wrap_content"
                        android:text="@string/cari_domain_label"
                        android:id="@+id/btn_cari_domain"
                        android:textSize="20dp"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>